# PQClean

./: .astylerc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .travis.yml  CONTRIBUTING.md  FsmSw_Types.h  Makefile  README.md  SECURITY.md  appveyor.yml  requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
Libs/: FsmSw_CommonLib.c  FsmSw_CommonLib.h  FsmSw_Fips202.c  FsmSw_Fips202.h  FsmSw_sha2.c  FsmSw_sha2.h
TCP/: client.c  eve.c  makefile  server.c
TOFU/: client_sign.c  common.h  eve_sign.c  makefile  server_sign.c
common/: aes.c  aes.h  compat.h  crypto_declassify.h  crypto_sort_int32.h  fips202.c  fips202.h  fips202x2.c  fips202x2.h  nistkatrng.c  nistseedexpander.c  nistseedexpander.h  notrandombytes.c  randombytes.c  randombytes.h  sha2.c  sha2.h  sp800-185.c  sp800-185.h
crypto_kem/: test.c  testvectors.c
crypto_kem/kyber768/clean/: .gitignore  CMakeLists.txt  GNUmakefile  META.yml  Makefile  Makefile.GNU_make  Makefile.Microsoft_nmake  api.h  cbd.c  cbd.h  indcpa.c  indcpa.h  kem.c  kem.h  kex.c  kex.h  ntt.c  ntt.h  params.h  poly.c  poly.h  polyvec.c  polyvec.h  precomp.c  reduce.c  reduce.h  symmetric-fips202.c  symmetric-shake.c  symmetric.h  verify.c  verify.h
crypto_sign/: test.c  testvectors.c
scripts/: PQClean.py  Tests.py  check_compile_lib.py  check_functest.py  check_license.py  run_checks.py
scripts_windows/: build_all.bat
test/: Makefile  Makefile.Microsoft_nmake  check_metadata.py  check_symbol_namespace.py  check_testvectors.py  check_tvectors.py  export_supercop.py  (+28 more)
(+8508 files in other folders)
